version/0.20/_sources/api/solver/_autosummary/settings/cathode_pl_zone.rst.txt
:orphan:

.. _cathode_pl_zone:

cathode_pl_zone
===============

.. autoclass:: ansys.fluent.core.solver.settings_241.cathode_pl_zone.cathode_pl_zone
    :show-inheritance:

.. rubric:: Attributes

==================================================   ========================================

Attribute                                                                             Summary

==================================================   ========================================
:ref:`cathode_pl_zone_list <cathode_pl_zone_list>`       Set cathode porous layer cell zones.

:ref:`cathode_pl_update <cathode_pl_update>`               Use Collective Boundary Condition.

:ref:`cathode_pl_material <cathode_pl_material>`               Cathode porous layer material.

:ref:`cathode_pl_porosity <cathode_pl_porosity>`               Cathode porous layer porosity.

:ref:`cathode_pl_kr <cathode_pl_kr>`                        Cathode porous layer permibility.

==================================================   ========================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`cathode <cathode>`       'cathode' child.

========================   ====================

