version/0.25/_sources/api/solver/_autosummary/settings/cathode_pl_zone.rst.txt
:orphan:

.. _cathode_pl_zone:

cathode_pl_zone
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.cathode_pl_zone.cathode_pl_zone
    :show-inheritance:

.. rubric:: Attributes

======================================================   =========================================================

Attribute                                                                                                  Summary

======================================================   =========================================================
:ref:`cathode_pl_zone_list <cathode_pl_zone_list>`                            Set cathode porous layer cell zones.

:ref:`cathode_pl_update <cathode_pl_update>`                                    Use Collective Boundary Condition.

:ref:`cathode_pl_material <cathode_pl_material>`                                    Cathode porous layer material.

:ref:`cathode_pl_porosity <cathode_pl_porosity>`                                    Cathode porous layer porosity.

:ref:`cathode_pl_kr <cathode_pl_kr>`                                            Cathode porous layer permeability.

:ref:`cathode_pl_cp_function <cathode_pl_cp_function>`                                Capillary Pressure Function.

:ref:`cathode_pl_angle <cathode_pl_angle>`                                     Cathode porous layer contact angle.

:ref:`cathode_pl_a <cathode_pl_a>`                           Cathode porous layer Leverett function coefficient a.

:ref:`cathode_pl_b <cathode_pl_b>`                           Cathode porous layer Leverett function coefficient b.

:ref:`cathode_pl_c <cathode_pl_c>`                           Cathode porous layer Leverett function coefficient c.

======================================================   =========================================================

.. rubric:: Included in:

========================   ===================

Parent                                 Summary

========================   ===================
:ref:`cathode <cathode>`       Set up cathode.

========================   ===================

